# The-Bot

./: .env  .gitignore  Cargo.toml
migrations/2022-09-24-104424_create_config/: down.sql  up.sql
src/: database.rs  helpers.rs  main.rs
src/commands/: mod.rs  ping.rs  run.rs  update.rs
src/database/: models.rs  schema.rs
src/handlers/: README.md  dad.rs  mod.rs  skill_issue.rs  ur_mum.rs
src/js/: mod.rs  runtime.js
