[package]
name = "thebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
tokio = { version = "1.20.1", features=["full"] }
diesel = { version = "2.0.0", features=["sqlite", "r2d2"] }
dotenvy = "0.15.5"
rand = "0.8.5"